2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneViewController.xft.xml: Call the xib-loading
	  base ctor.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* framework_IPhone.xml: Add System.Json.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Fix combo used when listing
	  provisioning profiles.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: More careful handling of
	  active provisioning profiles. Add a warning for null uuid.

2009-09-24  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Properly type outlets connected to
	  IBUICustomObjects.

2009-09-23  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Hide the commands for library compile
	  targets.

2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Use Xcode's partial class list to
	  filter the classes we generate. Remove unused code.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Fix spelling and grammar in
	  messages.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Tweak dialog a little more.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Improve sim-only dialog.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Improve sim-only dialog.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs:
	* IPhoneBuildExtension.cs:
	* IPhoneFrameworkBackend.cs: Improve the sim-only warning
	  dialog.

2009-09-15  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Add methods for warning about
	  sim-only build.

	* Keychain.cs:
	* Gui/IPhoneSigningKeyPanel.cs: Simplify code for finding
	  named certs.

	* IPhoneBuildExtension.cs: Warn when using features that don't