@@ -1,5 +1,12 @@
 2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.IPhone.csproj:
+	* MonoDevelop.IPhone.addin.xml:
+	* Templates/IPhoneLibraryProject.xpt.xml: Add MonoTouch
+	  library project template.
+
+2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* Templates/IPhoneViewController.xft.xml: Call the xib-loading
 	  base ctor.
 
